// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Array Template renders the custom array template and adds an array 1`] = `
<div>
  <form
    class="rjsf"
  >
    <div
      class="form-group field field-array"
    >
      <div
        class="form-group"
      >
        <div
          data-testid="custom-array-template"
        >
          <div
            class="title"
            style="padding-bottom: 14px; padding-top: 14px;"
          >
            CustomArrayFieldTest
          </div>
          <p />
          <br />
          <div
            class="array-item"
            style="border-bottom: 2px solid rgb(240,240,240); margin-bottom: 25px; padding-left: 10px;"
          >
            <div
              class="custom-array-template-remove-btn"
            >
              <div
                style="display: flex; align-items: center; justify-content: space-between; margin-right: -12px; border-bottom: 2px solid rgb(240,240,240); margin-bottom: 10px; padding-bottom: 10px;"
              >
                <h6
                  style="height: 14px;"
                >
                  <b>
                    CustomArrayFieldTest
                  </b>
                  <span
                    style="color: gray; margin-left: 5px; padding-top: 20px;"
                  >
                    (1 of 1)
                  </span>
                </h6>
                <button
                  class="btn"
                  type="button"
                >
                  <span
                    style="color: red;"
                  >
                    <i
                      class="fa-solid fa-circle-minus fa-2xl"
                    />
                  </span>
                   
                  <span
                    style="color: red; font-weight: bold;"
                  >
                     
                    Remove
                  </span>
                </button>
              </div>
              <div
                class="mb-2  d-flex align-items-center row"
              >
                <div
                  class="array-item col-lg-12 col-12"
                  data-testid="custom-array-element"
                >
                  <div
                    class="form-group field field-undefined"
                  >
                    <div
                      class="form-group"
                    >
                      <div
                        class="p-0 container-fluid"
                      >
                        <div
                          class="row"
                          style="margin-bottom: 10px;"
                        >
                          <div
                            class="col-12"
                          >
                             
                            <div
                              class="form-group field field-string"
                            >
                              <div
                                class="form-group"
                              >
                                <label
                                  class="form-label"
                                  for="root"
                                >
                                  First Name
                                </label>
                                <input
                                  aria-describedby="root__error root__description root__help"
                                  class="form-control"
                                  id="root"
                                  name="root"
                                  placeholder=""
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="row"
                          style="margin-bottom: 10px;"
                        >
                          <div
                            class="col-12"
                          >
                             
                            <div
                              class="form-group field field-string"
                            >
                              <div
                                class="form-group"
                              >
                                <label
                                  class="form-label"
                                  for="root"
                                >
                                  Last Name
                                </label>
                                <input
                                  aria-describedby="root__error root__description root__help"
                                  class="form-control"
                                  id="root"
                                  name="root"
                                  placeholder=""
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="row"
                          style="margin-bottom: 10px;"
                        >
                          <div
                            class="col-12"
                          >
                             
                            <div
                              class="form-group field field-integer"
                            >
                              <div
                                class="form-group"
                              >
                                <label
                                  class="form-label"
                                  for="root"
                                >
                                  Age
                                </label>
                                <input
                                  aria-describedby="root__error root__description root__help"
                                  class="form-control"
                                  id="root"
                                  name="root"
                                  placeholder=""
                                  step="1"
                                  type="number"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="custom-array-template-add-btn"
            data-testid="custom-array-template-add-btn"
            style="margin-top: -10px;"
          >
            <button
              class="btn"
              type="button"
            >
              <span
                style="color: rgb(31, 107, 162); margin-left: -12px;"
              >
                <i
                  class="fa-solid fa-circle-plus fa-2xl"
                />
              </span>
               
              <span
                style="color: rgb(31, 107, 162); font-weight: bold;"
              >
                Add another
                 
                CustomArrayFieldTest
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;

exports[`Custom Array Template renders the custom array template. 1.) Adds a field 2.) removes the added field 1`] = `
<div>
  <form
    class="rjsf"
  >
    <div
      class="form-group field field-array"
    >
      <div
        class="form-group"
      >
        <div
          data-testid="custom-array-template"
        >
          <div
            class="title"
            style="padding-bottom: 14px; padding-top: 14px;"
          >
            CustomArrayFieldTest
          </div>
          <p />
          <br />
          <div
            class="custom-array-template-add-btn"
            data-testid="custom-array-template-add-btn"
            style="margin-top: -30px;"
          >
            <button
              class="btn"
              type="button"
            >
              <span
                style="color: rgb(31, 107, 162); margin-left: -12px;"
              >
                <i
                  class="fa-solid fa-circle-plus fa-2xl"
                />
              </span>
               
              <span
                style="color: rgb(31, 107, 162); font-weight: bold;"
              >
                Add
                 
                CustomArrayFieldTest
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;
